Correct spacing

--- a/app/about/page.css
+++ b/app/about/page.css
@@ -1,5 +1,6 @@
 .top-about {
-  padding: 2.5rem 0rem 1.5rem 0rem;
+  padding: 2.5rem 0rem 0rem 0rem;
+  /* color: red; */
 }
 
 .title {
@@ -32,6 +33,10 @@
   /* justify-content: space-around; */
   display: flex;
   flex-direction: row;
+}
+
+.about-text {
+  padding: 0rem 1.5rem;
 }
 
 .about-pic {
@@ -68,6 +73,8 @@
     display: inline-block;
     position: relative;
     transition: 0.5s;
+    padding-bottom: 2.2rem;
+    /* color: red; */
   }
   
 .faq:after {
